deploy-strategies/mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
