deploy-strategies/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/mytetrisgame:v2
          ports:
            - containerPort: 3000
